Back to ParNewGC+ConcMarkSweepGC with simplified calculation of used memory